@@ -69,6 +69,7 @@ Package org.springframework.osgi.service
 * improved static service importers by adding caching of the service to ease service cleanup
 * added 'cache target' option on service exporter for compatible behaviour with OSGi 4.2 Blueprint spec
 * added 'reference-listener' as alias for the 'listener' reference declaration
+* fixed exporter tccl management bug caused by garbaged collected proxies
 
 Package org.springframework.osgi.mock
 * added specific OSGi r4.2 methods
